--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   padding: 0;
+  text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -14,6 +15,7 @@ code {
 }
 
 /***** LISTS *****/
+
 .container {
   width: 1000px;
   margin: 60px auto;
