Make its own component for the side menu

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -469,3 +469,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 .bm-overlay {
   background: rgba(0, 0, 0, 0.3);
 }
+
+.menu__total {
+  color: white;
+}
