--- a/client/src/index.css
+++ b/client/src/index.css
@@ -29,7 +29,7 @@ code {
 
 .top__welcome {
   height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(orchard.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(orchard-min.jpg);
   background-size: cover;
   position: relative;
   font-family: 'Montserrat Alternates', sans-serif;
@@ -439,7 +439,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 */
 .bm-menu-wrap {
   position: fixed;
-  height: 100%;
+  height: auto;
 }
 
 /* General sidebar styles */
