--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,10 @@ code {
     monospace;
 }
 
+.App {
+  padding-bottom: 100px;
+}
+
 /**********************************************
 *** TOP PART
 **********************************************/
