--- a/client/src/index.css
+++ b/client/src/index.css
@@ -504,6 +504,21 @@ Note: Beware of modifying this element as it can break the animations - you shou
   overflow: hidden;
 }
 
+.btn-logout {
+  width: 150px;
+  padding: 10px;
+  border: none;
+  background-color: #b8b7ad;
+  color: #373a47;
+  cursor: pointer;
+  transition: transform 0.3s;
+  letter-spacing: 2px;
+}
+
+.btn-logout:hover {
+  transform: scale(1.05);
+}
+
 
 /**********************************************
 *** SIGN UP AND LOGIN FORM
